# AI-Powered-Resume-Analyzer

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  test.py
docs/: AI-Powered Resume Analyzer_Farhan.docx  project_guide.md
src/: gap_analysis.py  jd_parser.py  matching_engine.py  resume_parser.py  suggestion_generator.py  utils.py
