[project]
name = "ai-powered-resume-analyzer"
version = "0.1.0"
description = "Job seekers and professionals often struggle to understand how well their resume aligns with a specific job description. This project develops an AI-powered Resume Analyzer that accepts a resume and a job description as inputs, evaluates skill and experience alignment, and provides a match score along with actionable improvement suggestions. The system helps candidates optimize their resumes, increase their chances of clearing ATS filters, and identify skill gaps for targeted upskilling."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []
